2009-06-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-task-navigator.c (layout_notwin):
	  Make sure no line fragments are drawn in midsized notif thumbnails.

2009-06-24  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/home/hd-title-bar.c (hd_title_bar_set_for_edit_mode): Set title
	after setting the state, not before.  Fixes: NB#124294

2009-06-24  Laszlo Pere  <lpere@blumsoft.eu>

	NB#117318: Able to pan between home views in layout mode.

	* src/mb/hd-app-menu.[ch]: Added a modal blocker window to the
	  HildonAppmenu class. The grab can be removed from the 
	  hildon-app-menu.c of the Hildon1 library.

2009-06-24  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Patch from Laszlo Pere for NB#109932.

	* src/home/hd-home.c (hd_home_desktop_do_motion,
	hd_home_desktop_do_release, hd_home_applet_emit_button_release_event, 
	hd_home_applet_emit_button_press_event): Allow starting of Home panning
	on top of applets as well and synthesize input events to the applets
	when needed.
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_setup_input_viewport): Catch input
	events for Home applet windows.

2009-06-23  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.57

	Really fix NB#122719 now.

	* src/home/hd-render-manager.[ch]
	(hd_render_manager_get_status_area_client): New function to access the
	status area client.
	* src/home/hd-title-bar.c (status_area_is_visible): Check coordinates
	of the SA client, not the Clutter client because it might not be
	updated yet.

2009-06-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#124133 No potrait mode when there is an incoming event preview
		  in switcher view.

	Naturally, if the poor, otherwise useless client is standing on the
	top of the window stack.

	* src/mb/hd-note.c:
	  Override MBWMClientDialog::stacking_layer() for incoming event
	  notifs.

2009-06-23  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/home/hd-render-manager.c