@@ -1,4 +1,11 @@
-2009-06-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+2009-06-24  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+
+	NB#124405 New contact dialog appears in portrait mode.
+
+	* src/mb/hd-comp-mgr.c (hd_comp_mgr_map_notify):
+	  After hdrm_restack() decide about portraitification.
+
+2009-06-24  Adam Endrodi  <adam.endrodi@blumsoft.eu>
 
 	* src/home/hd-task-navigator.c (layout_notwin):
 	  Make sure no line fragments are drawn in midsized notif thumbnails.
